trunk/Archive2/24/d0bd35772dbbda/output
main.cpp: In function 'int main()':
main.cpp:10:34: error: taking address of destructor 'X::~X'
   std::function<void(X&)> f=&X::~X;
                                  ^
