trunk/Archive2/24/d0bd35772dbbda/main.cpp
#include <functional>

struct X
{
  X(int){}
};

int main()
{
  std::function<void(X&)> f=&X::~X;
}